@@ -1,6 +1,9 @@
 
 13.0.2
 ------
+(RB=1016157)
+Update D2 LoadBalancerStrategyProperties PDSC file with new D2Event properties
+
 
 13.0.1
 ------
